--- a/src/index.html
+++ b/src/index.html
@@ -22,8 +22,7 @@
   <!-- SLUG -->
   <div id="allHolder" class="flex flex-col h-screen">
     <header class="bg-darkModBlue">
-      <div
-        class="my-10 md:my-4 max-w-5xl mx-auto px-4 lg:p-0 flex flex-col md:flex-row">
+      <div class="my-10 md:my-4 max-w-5xl mx-auto px-4 lg:p-0 flex flex-col md:flex-row">
 
         <h1 class="text-6xl">Al Augustin</h1>
 
@@ -37,10 +36,8 @@
 
             <figure
               class="md:flex bg-slate-100 rounded-xl p-8 md:p-0 dark:bg-slate-800 overflow-hidden mb-16 md:pr-4 md:basis-7/12 ">
-              <img
-                class="mx-auto md:mx-0 w-24 h-24 md:w-56 md:h-56 md:rounded-none rounded-full"
-                src="./img/al_headshot.jpeg" alt="Al Augustin headshot"
-                width="200" height="200">
+              <img class="mx-auto md:mx-0 w-24 h-24 md:w-56 md:h-56 md:rounded-none rounded-full"
+                src="./img/al_headshot.jpeg" alt="Al Augustin headshot" width="200" height="200">
 
               <div class="pt-6 md:p-8 text-center md:text-left space-y-4">
                 <blockquote class="text-lg text-slate-100">
@@ -67,6 +64,29 @@
               I am a technically sound developer based in Toronto with over 10
               years of experience in the field.
             </p>
+
+            <h3 class="text-4xl">💼</h3>
+            <ul class="flex flex-row justify-between font-bold text-xs mb-16">
+              <li class="foo"><a href="https://app.box.com/s/d1yoc5bcx6w4m637kap71bm3el5jrtx5"
+                  class="inline-block rounded-md border border-transparent bg-indigo-600 px-8 py-3 text-center font-medium text-white hover:bg-indigo-700"
+                  target="_blank">CV</a></li>
+              <li class="foo"><a href="https://ca.linkedin.com/in/alaugustin"
+                  class="inline-block rounded-md border border-transparent bg-indigo-600 px-8 py-3 text-center font-medium text-white hover:bg-indigo-700"
+                  target="_blank">LinkedIn</a></li>
+            </ul>
+            <h3 class="text-4xl">💻</h3>
+            <ul class="flex flex-row justify-between font-bold text-xs mb-16">
+              <li class="foo"><a href="https://codepen.io/alaugustin/pens/popular"
+                  class="inline-block rounded-md border border-transparent bg-indigo-600 px-8 py-3 text-center font-medium text-white hover:bg-indigo-700"
+                  target="_blank">Codepen</a></li>
+              <li class="foo"><a href="https://stackoverflow.com/users/1760096/al-augustin"
+                  class="inline-block rounded-md border border-transparent bg-indigo-600 px-8 py-3 text-center font-medium text-white hover:bg-indigo-700"
+                  target="_blank">Stack Overflow</a></li>
+              <li class="foo"><a href="https://github.com/alaugustin"
+                  class="inline-block rounded-md border border-transparent bg-indigo-600 px-8 py-3 text-center font-medium text-white hover:bg-indigo-700"
+                  target="_blank">GitHub</a>
+              </li>
+            </ul>
           </div>
         </div>
       </section>
@@ -75,19 +95,12 @@
     <footer class="pb-4 pt-8 bg-lightGrayBlue text-mainBlack">
       <div class="max-w-5xl mx-auto px-4 lg:p-0 ">
         <ul class="flex flex-row justify-between font-bold text-xs mb-16">
-          <li class="foo"><a href="https://app.box.com/s/d1yoc5bcx6w4m637kap71bm3el5jrtx5"
-              class="inline-block rounded-md border border-transparent bg-indigo-600 px-8 py-3 text-center font-medium text-white hover:bg-indigo-700" target="_blank">CV</a></li>
-          <li class="foo"><a href="https://ca.linkedin.com/in/alaugustin"
-              class="inline-block rounded-md border border-transparent bg-indigo-600 px-8 py-3 text-center font-medium text-white hover:bg-indigo-700" target="_blank">LinkedIn</a></li>
-          <li class="foo"><a href="https://codepen.io/alaugustin/pens/popular"
-              class="inline-block rounded-md border border-transparent bg-indigo-600 px-8 py-3 text-center font-medium text-white hover:bg-indigo-700" target="_blank">Codepen</a></li>
-          <li class="foo"><a href="https://stackoverflow.com/users/1760096/al-augustin"
-              class="inline-block rounded-md border border-transparent bg-indigo-600 px-8 py-3 text-center font-medium text-white hover:bg-indigo-700" target="_blank">Stack Overflow</a></li>
-          <li class="foo"><a href="https://github.com/alaugustin" class="inline-block rounded-md border border-transparent bg-indigo-600 px-8 py-3 text-center font-medium text-white hover:bg-indigo-700" target="_blank">GitHub</a>
-          </li>
           <li class="foo"><a href="https://twitter.com/augustinaa"
-              class="inline-block rounded-md border border-transparent bg-indigo-600 px-8 py-3 text-center font-medium text-white hover:bg-indigo-700" target="_blank">Twitter</a></li>
-          <li class="foo"><a href="https://www.last.fm/user/o1k" class="inline-block rounded-md border border-transparent bg-indigo-600 px-8 py-3 text-center font-medium text-white hover:bg-indigo-700" target="_blank">Last.fm</a>
+              class="inline-block rounded-md border border-transparent bg-indigo-600 px-8 py-3 text-center font-medium text-white hover:bg-indigo-700"
+              target="_blank">Twitter</a></li>
+          <li class="foo"><a href="https://www.last.fm/user/o1k"
+              class="inline-block rounded-md border border-transparent bg-indigo-600 px-8 py-3 text-center font-medium text-white hover:bg-indigo-700"
+              target="_blank">Last.fm</a>
           </li>
         </ul>
         <div>&copy; 2011 <span id="currentYear"></span> Al Augustin</div>
